--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   flutter_dotenv: ^5.1.0
   motion_tab_bar: ^2.0.4
   rive: ^0.13.20
+  shared_preferences: ^2.5.3
+  confetti: ^0.8.0
+  audioplayers: ^6.4.0
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +72,7 @@ flutter:
     - assets/images/
     - assets/locales/
     - assets/animations/
+    - assets/sounds/
     - .env
     - .env.dev
 
