--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   get_it: ^8.0.3
   provider: ^6.1.5
+  path_provider: ^2.1.5
   easy_localization: ^3.0.1
   flutter_tts: ^4.2.3
   connectivity_plus: ^6.1.4
