--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.5.3
   confetti: ^0.8.0
   audioplayers: ^6.4.0
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
